# hackernews_analysis

./: .gitignore  pyproject.toml
explorative_analysis/archive/: zero_shot_v1.py  zero_shot_v4.py
explorative_analysis/scripts/: correlations.py  explorative.py  front_page_ana.py  keyword_search.py  regressions.py
processing/: infer_columns.py  keyword_search.py  topic_modelling.py  zero_shot.py  zero_shot_v2.py
scrape/src/: scrape.py  tools.py
src/advanced_analysis/: classification.py  forest_classification.py  forest_regressions.py  linear_regression.py  regressions.py  tools.py
src/explorative_analysis/: correlations.py  explorative.py  front_page_ana.py
src/explorative_analysis/archive/: zero_shot_v3.py
src/processing/: few_shot.py  infer_columns.py  keyword_search.py  topic_modelling.py  zero_shot.py
src/scrape/: scrape.py  tools.py
