[project]
name = "hackernews"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Denise Müller", email = "134210655+dzzling@users.noreply.github.com"},
]
dependencies = ["bs4>=0.0.2", "requests>=2.32.3", "ipykernel>=6.29.5", "polars>=1.22.0", "altair>=5.5.0", "vegafusion[embed]>=1.5.0", "vl-convert-python>=1.6.0", "pyarrow>=19.0.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
