[project]
name = "hackernews"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Denise Müller", email = "134210655+dzzling@users.noreply.github.com"},
]
dependencies = ["bs4>=0.0.2", "requests>=2.32.3", "ipykernel>=6.29.5", "polars>=1.22.0", "altair>=5.5.0", "vegafusion[embed]>=1.5.0", "vl-convert-python>=1.6.0", "pyarrow>=19.0.1", "bertopic>=0.16.4", "nltk>=3.9.1", "gensim>=4.3.3", "scikit-learn>=1.6.1", "matplotlib>=3.10.1", "hdbscan>=0.8.40", "shap>=0.47.1", "transformers>=4.40.0", "deptry>=0.23.0", "streamlit>=1.44.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
